<resources>
    <string name="app_name">LatteEC</string>
    <string name="regist">注册</string>
    <string name="name">姓名</string>
    <string name="email">邮箱</string>
    <string name="phone_number">手机号</string>
    <string name="password">密码</string>
    <string name="passwordagin">重复密码</string>
    <string name="hint">已经注册了? 请登陆</string>
    <string name="logo">Logo</string>
    <string name="login">登陆</string>
    <string name="no_user">还没有账户？现在注册</string>
</resources>
